--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ LMT/scripts/measures_profile_cc_mice_one_mouse_3days_a.txt
 LMT/scripts/measures_profile_cc_mice_one_mouse_day1_a.txt
 LMT/scripts/measures_profile_cc_mice_one_mouse_day2_a.txt
 LMT/scripts/measures_profile_cc_mice_one_mouse_day3_a.txt
+LMT/scripts/profile_CC_strain_single_obj_explo_phase_1.txt
