--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,10 @@ LMT/scripts/measures_profile_cc_mice_one_mouse_day3_a.txt
 LMT/scripts/profile_CC_strain_single_obj_explo_phase_1.txt
 LMT/scripts/profile_CC_strain_single_obj_explo_phase_1.txt
 *.pdf
+LMT/scripts/outF15-F16.txt
+LMT/scripts/outF19F20.txt
+LMT/scripts/outmixed.txt
+LMT/scripts/outNewChip.txt.txt
+LMT/scripts/outOldChip-F13-F14.txt
+LMT/scripts/outOldChipF17-F18.txt
+LMT/scripts/paire new.txt
