--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
 encoding//LMT/__init__.py=UTF-8
+encoding//LMT/lmtanalysis/BuildEventFollowZone.py=UTF-8
+encoding//LMT/lmtanalysis/BuildEventFollowZone2.py=UTF-8
