Update NOR scripts

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//LMT/lmtanalysis/AnimalType.py=UTF-8
 encoding//LMT/lmtanalysis/Parameters.py=UTF-8
+encoding//LMT/scripts/Novel_Object_Recognition_Test/ComputeActivityHabituationNorTestRedCage.py=UTF-8
 encoding/<project>=UTF-8
